slashies-macros/tests/command/e11_subcommand_not_implemented.stderr
error[E0277]: the trait bound `BadCommand: ApplicationCommandInteractionHandler` is not satisfied
   --> tests/command/e11_subcommand_not_implemented.rs:4:10
    |
4   | #[derive(Command)]
    |          ^^^^^^^ the trait `ApplicationCommandInteractionHandler` is not implemented for `BadCommand`
    |
note: required by a bound in `slashies::Command`
   --> $WORKSPACE/slashies/src/lib.rs
    |
    | pub trait Command: ApplicationCommandInteractionHandler + Sized {
    |                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `slashies::Command`
    = note: this error originates in the derive macro `Command` (in Nightly builds, run with -Z macro-backtrace for more info)
